@@ -4,6 +4,12 @@
 
 # Changelog:
 #
+# Updated: 16 NOV 2023
+# - move Regina-REXX source tarballs to GitHub Gists
+#   don't rely on wrljet.com for these
+# - use curl instead of wget to download the Regina tarballs from Gists
+# - add curl to the required packages
+#
 # Updated: 14 NOV 2023
 # - fix defaults for Regina in config files to not overwrite options
 # - add new sdl-hyperion-freebsd-14.conf to use Regina 3.9.3
